--- a/day 47/homework.css
+++ b/day 47/homework.css
@@ -28,7 +28,7 @@ img{
     font-weight: bold;
     font-size: 1.3em;
     max-width: 500px;
-    text-shadow: 2px 2px 2px skyblue;
+    text-shadow: 2px 2px 2px s;
 }
 
 .conteiner2{
