--- a/day 49/homework.css
+++ b/day 49/homework.css
@@ -5,33 +5,33 @@
     justify-content: space-around; 
     height: 650px;
     width: 1000px;
-    background-color: white;
+    background-color: rgb(233, 226, 226);
     border: 2px solid black;
 }
 #itam1{
     height: 200px;
     width: 200px;
     border: 1px solid black;
-    background-color: azure;
+    background-color: rgb(169, 176, 176);
 }
 #itam2{
     
     height: 200px;
     width: 200px;
     border: 1px solid black;
-    background-color: azure;
+    background-color: rgb(169, 176, 176);
 }
 #itam3{
     height: 200px;
     width: 200px;
     border: 1px solid black;
-    background-color: azure;
+    background-color: rgb(169, 176, 176);
 }
 #itam4{
     height: 200px;
     width: 200px;
     border: 1px solid black;
-    background-color: azure;
+    background-color: rgb(169, 176, 176);
 }
 img{
     height: 50px;
