--- a/day 52/homework.css
+++ b/day 52/homework.css
@@ -9,4 +9,9 @@ button{
     width: 80px;
     display: block;
     margin: auto;
+    color: gold;
+    background-color: purple;
+}
+body{
+    background-color: rgb(62, 62, 122);
 }
