--- a/day 58/homework.css
+++ b/day 58/homework.css
@@ -11,6 +11,7 @@ div{
     display: flex;
     justify-content: center;
  color: rgb(0, 126, 0);
+ background-color: #6abd49;
 }
 
 nav{
@@ -23,6 +24,7 @@ nav{
     justify-content: center;
     align-items:center ;
     gap: 10px;
+    border: 3px solid white;
 }
 
 nav a{
@@ -72,7 +74,10 @@ nav a:nth-child(5):hover~span{
 }
 
 iframe{
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   display: block;
+   margin: auto;
+}
+
+body{
+    background-color: #6abd49;
 }
